objects/Trial__c.object
<CustomObject>
    <description>As per DLT-5979 - This object is created to capture details of Trial.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trials</relationshipLabel>
        <relationshipName>Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>on this field SFDC are storing campaign code which are coming from Hybris system by Eloqua</description>
        <label>Campaign Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Lead ID</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>On-Demand Trials</relationshipLabel>
        <relationshipName>Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trials</relationshipLabel>
        <relationshipName>Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_id_SAP__c</fullName>
        <label>Contact id SAP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ssd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact ssd</label>
        <referenceTo>LCRM_Contact_SSD__c</referenceTo>
        <relationshipLabel>Trials</relationshipLabel>
        <relationshipName>Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Early_End_Other_Reason__c</fullName>
        <description>Any other reason apart from the standard reasons.</description>
        <label>Early End Other Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_End_Reason__c</fullName>
        <description>Stores the reason for ending trials.</description>
        <label>Early End Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trial Abuse</fullName>
                </value>
                <value>
                    <fullName>Product Purchased</fullName>
                </value>
                <value>
                    <fullName>Incorrect Trial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>Created as part of DLT-19361 to capture error code values</description>
        <label>Error Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description2__c</fullName>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>Created as part of DLT-19361 to capture Error description values</description>
        <label>Error Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSI_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of DPS-12323 for Lotus program</description>
        <label>GSI Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_trial_Id__c</fullName>
        <label>Global trial Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiated_User_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiated User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiated_User_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiated User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvitedDateTime__c</fullName>
        <label>Invited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invited_User_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiated User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Lapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Lapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lead_Converted__c</fullName>
        <formula>Contact_LeadId__r.IsConverted</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lead Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lapsed_Reason_Code__c</fullName>
        <label>Lapsed Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Days_To_Extend__c</fullName>
        <label>Number Of Days To Extend</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Times_Extended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Num Of Times Extended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Times_Trial_Reactivated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Num of Times Trial Reactivated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODT_Email__c</fullName>
        <description>Field to capture the Email address of the selected contact when Sales Rep initiates a Trial for a Customer</description>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ODT_Ended_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>store the user details who ended the trial</description>
        <label>Ended By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ODT_Number_Of_Days_Trial_Extended__c</fullName>
        <description>This field captures the cumulative number of Days a Trial has got extended</description>
        <label>Number Of Days Trial Extended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODT_Product_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup relation to the product bundle object.</description>
        <label>ODT Product Bundle</label>
        <referenceTo>ODT_Product_Bundle__c</referenceTo>
        <relationshipLabel>Trials</relationshipLabel>
        <relationshipName>Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ODT_SAP_Account_Number__c</fullName>
        <description>This is field will capture SAP account number of the SSD for which trial is being initiated.</description>
        <label>Account Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ODT_Trial_Extend_Date__c</fullName>
        <label>Trial Extend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ODT_Trial_Product_Category__c</fullName>
        <description>This field captures the product category of Product that is being offered for the Trial</description>
        <label>Trial Product Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>One_Pass_Identifier__c</fullName>
        <label>One Pass Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PrimaryContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_User_First_Name__c</fullName>
        <formula>Contact_LeadId__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary User First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_User_Last_Name__c</fullName>
        <formula>Contact_LeadId__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary User Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <description>Storing Hybris Profile ID for using both Reactivate and Add User</description>
        <label>Profile ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Type__c</fullName>
        <label>Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EXISTING_USER_SAME_DOMAIN</fullName>
                    <default>true</default>
                    <label>EXISTING_USER_SAME_DOMAIN</label>
                </value>
                <value>
                    <fullName>EXISTING_USER_NEW_DOMAIN</fullName>
                </value>
                <value>
                    <fullName>NET_NEW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Promotion_Code__c</fullName>
        <description>Storing SAP Promotion code to use in Add user</description>
        <label>SAP Promotion Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>contains the count for one pass error service to limit the schedulable class.</description>
        <inlineHelpText>no of times one pass error service called</inlineHelpText>
        <label>Service Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_System_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ssd</label>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipLabel>On-Demand Trials</relationshipLabel>
        <relationshipName>Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Previous_Day__c</fullName>
        <label>Total Hours Previous Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transactions_Views__c</fullName>
        <label>Transactions\Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Campaign__c</fullName>
        <label>Trial Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Id__c</fullName>
        <label>Trial Id(s)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Initiated_Account_Number__c</fullName>
        <formula>IF(NOT( ISBLANK(Source_System_Detail__r.Source_System_Account_Number__c)), Source_System_Detail__r.Source_System_Account_Number__c, 
IF(NOT( ISBLANK(Source_System_Detail__r.OLC_Account_Number__c)), Source_System_Detail__r.OLC_Account_Number__c, 
IF(NOT( ISBLANK(Contact_LeadId__r.SAPAccountNumber__c )) , Contact_LeadId__r.SAPAccountNumber__c, 
IF(NOT( ISBLANK(Contact_LeadId__r.External_Trial_Account_ID__c)), Contact_LeadId__r.External_Trial_Account_ID__c, ODT_SAP_Account_Number__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Initiated Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Initiated_Mode__c</fullName>
        <label>Trial Initiated Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started by Marketing</fullName>
                    <default>true</default>
                    <label>Started by Marketing</label>
                </value>
                <value>
                    <fullName>Started Immediately</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Journey__c</fullName>
        <label>Trial Journey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rep Initiated Journey</fullName>
                </value>
                <value>
                    <fullName>NCJ</fullName>
                </value>
                <value>
                    <fullName>ECJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Products_Recommendation__c</fullName>
        <label>Trial Products Recommendation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trial_Source__c</fullName>
        <label>Trial Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Status__c</fullName>
        <label>Trial Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rep Initiated</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Bounceback</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Timed-out</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>Entitlement Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_products__c</fullName>
        <label>Trial Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Auth_ID__c</fullName>
        <label>User Auth ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Trial</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Trial_Start_Date__c</columns>
        <columns>Trial_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TR-{000}</displayFormat>
        <label>Trial Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trials</pluralLabel>
    <recordTypes>
        <fullName>Accepted_Trials</fullName>
        <active>true</active>
        <label>Accepted Trials</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expired_Trials</fullName>
        <active>true</active>
        <label>Expired Trials</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invited_Trials</fullName>
        <active>true</active>
        <label>Invited Trials</label>
    </recordTypes>
    <recordTypes>
        <fullName>NCJ_Entitlement</fullName>
        <active>true</active>
        <label>NCJ Entitlement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Start_and_End_Date</fullName>
        <active>true</active>
        <description>Validation on Start and End Date based on the selection of Trial Status.</description>
        <errorConditionFormula>(AND( ISPICKVAL( Trial_Status__c , &apos;Accepted&apos;) ||ISPICKVAL( Trial_Status__c , &apos;Expired&apos;)  , OR(ISBLANK( Trial_End_Date__c ),  ISBLANK( Trial_Start_Date__c ) ) ))</errorConditionFormula>
        <errorMessage>Start Date and End Date are required when trial status is Accepted or Expired.</errorMessage>
    </validationRules>
</CustomObject>